fixed fist sizing on mobile

--- a/src/assets/scss/_home_top.scss
+++ b/src/assets/scss/_home_top.scss
@@ -8,6 +8,7 @@
     @media screen and (max-width: 800px) {
       height: auto;
       width: 400px;
+      max-width: 100%;
       margin-left: 0;
     }
     @media screen and (max-width: 400px) {
